[gd_scene load_steps=3 format=3 uid="uid://dx7112qf1ahyc"]

[ext_resource type="Texture2D" uid="uid://b747vyu1rfuoo" path="res://resources/pixel.png" id="1_0pjer"]
[ext_resource type="Script" path="res://scripts/view/main_menu.gd" id="1_q635t"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_q635t")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.341176, 0.423529, 1, 1)
position = Vector2(576.597, 324.567)
scale = Vector2(-1153.19, -649.134)
texture = ExtResource("1_0pjer")

[node name="Puzzle Mode" type="Button" parent="."]
offset_left = 37.0
offset_top = 50.0
offset_right = 178.0
offset_bottom = 117.0
text = "Play Puzzle"

[node name="Campaign Mode" type="Button" parent="."]
offset_left = 37.0
offset_top = 156.0
offset_right = 178.0
offset_bottom = 223.0
text = "Play Campaign"

[node name="Versus Mode" type="Button" parent="."]
offset_left = 40.0
offset_top = 249.0
offset_right = 181.0
offset_bottom = 316.0
text = "Play Versus"

[node name="Level Creator" type="Button" parent="."]
offset_left = 40.0
offset_top = 338.0
offset_right = 181.0
offset_bottom = 405.0
text = "Level Creator"

[node name="Settings" type="Button" parent="."]
offset_left = 43.0
offset_top = 435.0
offset_right = 184.0
offset_bottom = 502.0
text = "Settings"

[node name="Quit" type="Button" parent="."]
offset_left = 45.0
offset_top = 527.0
offset_right = 186.0
offset_bottom = 594.0
text = "Quit"

[connection signal="pressed" from="Puzzle Mode" to="." method="play_puzzle"]
[connection signal="pressed" from="Campaign Mode" to="." method="play_campaign"]
[connection signal="pressed" from="Versus Mode" to="." method="play_multiplayer"]
[connection signal="pressed" from="Level Creator" to="." method="level_creator"]
[connection signal="pressed" from="Settings" to="." method="change_settings"]
[connection signal="pressed" from="Quit" to="." method="quit_game"]
